# chip8-interpreter

./: .gitignore  NOTICE.md  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  chip8-interpreter.sln
src/application/: AppPlatform.cpp  AppPlatform.h  CMakeLists.txt  Display.cpp  Display.h  Icons.h  ImGuiWindow.cpp  ImGuiWindow.h  InterpreterDebugger.cpp  InterpreterDebugger.h  Keyboard.cpp  Keyboard.h  Resources.cpp  Resources.h  Sound.cpp  Sound.h  main.cpp
src/core/: CMakeLists.txt  Constants.h  Context.cpp  Context.h  Disassembler.cpp  Disassembler.h  Instructions.cpp  Instructions.h  Interpreter.cpp  Interpreter.h  Platform.h  TypeAliases.h
src/interpreter/: CMakeLists.txt  Disassembler.cpp  Disassembler.h  Display.cpp  Display.h  Icons.h  ImGuiWindow.cpp  ImGuiWindow.h  Instructions.cpp  Instructions.h  Interpreter.cpp  Interpreter.h  InterpreterDebugger.cpp  InterpreterDebugger.h  Keyboard.cpp  Memory.cpp  Memory.h  Resources.cpp  Sound.cpp  Sound.h  interpreter.vcxproj  interpreter.vcxproj.filters  main.cpp
tools/: codeformat.ps1
